force-app/main/default/objects/Proforma_Invoice_Line__c/Proforma_Invoice_Line__c.object-meta.xml
<CustomObject>
    <label>Proforma Invoice Line</label>
    <nameField>
        <displayFormat>PIL-{0}</displayFormat>
        <label>A/N</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proforma Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>