force-app/main/default/objects/Proforma_Invoice_Line__c/fields/Proforma_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Invoice__c</fullName>
    <label>Proforma Invoice</label>
    <referenceTo>Proforma_Invoice__c</referenceTo>
    <relationshipLabel>Proforma Invoice Lines</relationshipLabel>
    <relationshipName>Proforma_Invoice_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>