force-app/main/default/objects/Proforma_Invoice_Line__c/fields/Rate_Plan__c.field-meta.xml
<CustomField>
    <fullName>Rate_Plan__c</fullName>
    <label>Rate Plan</label>
    <type>TextArea</type>
</CustomField>