force-app/main/default/objects/Proforma_Invoice_Line__c/fields/Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount__c</fullName>
    <formula>ROUND( Tax__c * 100,0)  / 100  *  Sub_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>